Blackpurl/src/objects/Unit_Make__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN_Code__c</fullName>
        <label>VIN Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Unit Make</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Make</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Makes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>